--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
     "ionicons": "^7.0.0",
+    "ngx-socket-io": "^4.7.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
